[project]
name = "science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "altair<=5.3.0",
    "biopython",
    "black",
    "catppuccin-jupyterlab",
    "downloads",
    "finch-sketch",
    "flake8",
    "isort",
    "itables",
    "jupyterlab",
    "jupyterlab-code-formatter",
    "matplotlib",
    "mcp>=1.12.1",
    "mypy",
    "nbstripout>=0.8.1",
    "needletail",
    "nf-core",
    "onecodex[all,reports]",
    "openpyxl",
    "pandas",
    "polars",
    "pyarrow",
    "requests-cache",
    "ruff",
    "scipy",
    "seaborn",
    "tabview",
    "taxonomy",
    "tqdm",
]
