[project]
name = "science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "altair>=5.5.0",
    "biopython",
    "black",
    "catppuccin-jupyterlab",
    "downloads",
    "fastexcel>=0.15.1",
    "finch-sketch",
    "flake8",
    "isort",
    "itables",
    "jupyterlab",
    "jupyterlab-code-formatter",
    "matplotlib",
    "mcp>=1.12.1",
    "mypy",
    "nbstripout>=0.8.1",
    "needletail",
    "nf-core",
    "onecodex[all,reports]==0.19.2",
    "openpyxl",
    "pandas",
    "polars",
    "pyarrow",
    "requests-cache",
    "ruff",
    "scipy",
    "seaborn",
    "tabview",
    "taxonomy",
    "tqdm",
]
