[project]
name = "science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    # Core data science & visualization
    "altair>=5.5.0",
    "fastexcel>=0.15.1",
    "itables",
    "matplotlib",
    "openpyxl",
    "pandas",
    "polars",
    "pyarrow",
    "scipy",
    "seaborn",
    "tabview",
    "tqdm",

    # Bioinformatics
    "biopython",
    "cyvcf2>=0.31.4",
    "finch-sketch",
    "needletail",
    "nf-core",
    "onecodex[all,reports]==1.0.0",
    "pysam>=0.23.3",
    "taxonomy",

    # Dev tools & environment
    "catppuccin-jupyterlab",
    "downloads",
    "flake8",
    "isort",
    "jupyterlab",
    "jupyterlab-code-formatter",
    "jupytext>=1.19.1",
    "nbstripout>=0.8.1",
    "requests-cache",
]
